--- a/portal/templates/portal/add-user.html
+++ b/portal/templates/portal/add-user.html
@@ -119,7 +119,7 @@
       <div class="ml-[96px] mt-2 flex flex-col gap-6 w-[260px]">
         <span
           class="text-[12.5px] px-[8px] mb-4 py-[6px] font-semibold border-2 self-start border-green-500 rounded-md text-green-500"
-          >ACTIVE</span
+          >ACTIVE USER</span
         >
         <h1 class="font-bold text-[18px]">User configuration</h1>
         <ul class="list-none">
@@ -195,7 +195,7 @@
             class="text-slate-400 text-[16px] leading-2 font-semibold mb-1"
             >Test ID</label
           >
-          {{form.test_id}}
+          {{form.test}}
         </div>
         <button
             type='submit'
