--- a/portal/templates/portal/test.html
+++ b/portal/templates/portal/test.html
@@ -10,6 +10,31 @@
 {% endblock styles %}
 
 {% block content %}
+<div class="spinner-wrapper" style='display: none'>
+  <div class="spinner-border text-primary" role='status'>
+    <span class="visually-hidden" style='color:white; font-size:18px'>Saving your response...</span>
+  </div>
+</div>
+<style>
+  .spinner-wrapper {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index:9999;
+    display: flex;
+    justify-content: center;
+  }
+
+  .spinner-border {
+    height: 60px;
+    width: 60px;
+    margin-top: 30vh;
+  }
+
+</style>
   <nav>
     <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
     <div class="nav-div">
