--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -304,7 +304,7 @@
                     placeholder="Filter"
                     class="border-b-2 font-normal text-[14px] p-2 outline-none focus:border-orange-400"
                     name=""
-                    id=""
+                    id="firstname-filter"
                   />
                 </td>
                 <td
@@ -315,7 +315,7 @@
                     placeholder="Filter"
                     class="border-b-2 font-normal text-[14px] p-2 outline-none focus:border-orange-400"
                     name=""
-                    id=""
+                    id="lastname-filter"
                   />
                 </td>
                 <td
@@ -326,7 +326,7 @@
                     placeholder="Filter"
                     class="border-b-2 font-normal text-[14px] p-2 outline-none focus:border-orange-400"
                     name=""
-                    id=""
+                    id="email-filter"
                   />
                 </td>
                 <td
@@ -337,7 +337,7 @@
                     placeholder="Filter"
                     class="border-b-2 font-normal text-[14px] p-2 outline-none focus:border-orange-400"
                     name=""
-                    id="checkbox-all"
+                    id="test-filter"
                   />
                 </td>
               </tr>
