--- a/portal/templates/portal/test-settings/result-detailed.html
+++ b/portal/templates/portal/test-settings/result-detailed.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sokalp - Test settings</title>
+    <title>Sokalp - User Result</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -248,7 +248,7 @@
             <li>
               <a href="{% url 'edit-test' tests.id %}">
                 <div
-                  class="p-3 flex items-center shadow-sm gap-3 rounded-md group bg-white"
+                  class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -256,7 +256,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-6 h-6 stroke-orange-400"
+                    class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
                   >
                     <path
                       stroke-linecap="round"
@@ -265,7 +265,7 @@
                     />
                   </svg>
                   <p
-                    class="text-[14px] text-black font-semibold"
+                    class="text-[14px] text-slate-500 group-hover:text-black font-semibold"
                   >
                     Questions manager
                   </p>
@@ -275,7 +275,7 @@
             <li>
               <a href="{% url 'time-settings' tests.id %}">
                 <div
-                  class="p-3 flex  items-center group hover:bg-white gap-3 rounded-md"
+                  class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -300,7 +300,7 @@
             <li>
               <a href="{% url 'results' tests.id %}">
                 <div
-                  class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
+                  class="p-3 flex shadow-sm items-center gap-3 bg-white rounded-md"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -308,7 +308,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
+                    class="w-6 h-6 stroke-orange-400"
                   >
                     <path
                       stroke-linecap="round"
@@ -317,7 +317,7 @@
                     />
                   </svg>
                   <p
-                    class="text-[14px] text-slate-500 group-hover:text-black font-semibold"
+                    class="text-[14px] group-hover:text-black font-semibold"
                   >
                     Results
                   </p>
@@ -328,30 +328,11 @@
         </div>
         <div class="mt-2  flex-grow flex flex-col gap-5 mr-8">
           <div class="flex justify-between items-center mb-4">
-            <h1 class="font-semibold text-[18px]">Questions manager</h1>
-            <div class="flex gap-[1.25px]">
-              <button
-              id='add-question'
-              onclick= "changeLoc()"
-              class="bg-orange-400 text-white px-4 py-[10px] font-semibold text-[16px] rounded-tr-none rounded-br-none rounded-lg hover:bg-orange-500"
-            >                    
-              Add question         
-            </button>
-            <button
-              onclick = 'showModal2()'
-              id='modal-button'
-              class="bg-orange-400 text-white px-4 py-[12px] font-semibold text-[18px] rounded-tl-none rounded-bl-none rounded-md hover:bg-orange-500"
-            >                    
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-            </svg>        
-            </button>
-          </div>
+            <h1 class="font-semibold text-[18px]">{{user.username}}</h1>
           </div>
           <div class="bg-white rounded-md flex-1 flex gap-3 items-center justify-between">
             <div class="flex gap-3 items-center p-5">
-              <input type="checkbox" class='question_check size-4' name='question-check-all' id="checkbox-all" class="size-4 p-5">
-              <label id='selected-box' for="checkbox-1" class="font-semibold text-[13px]">QUESTIONS {{ questions_len }}</label>
+              <label id='selected-box' for="checkbox-1" class="font-semibold text-[13px]">USER ANSWERS {{ questions_len }}</label>
               
               <button id='delete-btn' class='group hover:text-red-500 hidden gap-3 items-center'>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
@@ -367,37 +348,56 @@
             </div>
           </div> 
           {% for question in questions %}
-            <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2">
+            <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2"">
               <div class="flex gap-4 items-start p-5 justify-between">
                 <div class="flex gap-4">
-                  <input type="checkbox" class='question_check size-4' name='question_check' id="{{question.id}}" class="size-4">
                   <label for="{{question.id}}" class="font-semibold text-[18px]">Q. {{forloop.counter}}</label>
                 </div>
-                <p class="text-slate-500">Points: 1</p>
+                <p class="text-slate-500">
+                  {% if question.correct_op == question.selected_option %}
+                  Points: 1
+                  {% else %}
+                    {% if question.selected_option == 'null' %}
+                      Not attempted
+                    {% else %}
+                      Points: 0
+                    {% endif %}
+                  {% endif %}
+
+                </p>
               </div>
               <div class="ml-12 mb-4">
                   {{question.question|safe}}
               </div>
               <div class='flex flex-col gap-2 mb-6'>
-                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 1%}bg-green-300 bg-opacity-25 rounded-md {%endif%} break-words p-3">
+                <div class="flex gap-4 ml-16 items-start
+                             {% if question.correct_op == 1%} 
+                                bg-green-300 bg-opacity-25 rounded-md 
+                              {% else %}
+                                {% if question.selected_option == 1 %}
+                                  bg-red-400 bg-opacity-25 rounded-md
+                                {% endif %}
+                              {%endif%}
+                            break-words p-3"
+                >
                   <input type="checkbox" id="op1" class="size-4" disabled>
                     <label for="op1" class="text-[18px] leading-6">
                         {{question.op1|safe}}
                     </label>
                 </div>
-                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 2%}bg-green-300 bg-opacity-25 rounded-md {%endif%} break-words p-3">
+                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 2%}bg-green-300 bg-opacity-25 rounded-md {% else %} {% if question.selected_option == 2 %}bg-red-400 bg-opacity-25 rounded-md{% endif %} {%endif%} break-words p-3">
                   <input type="checkbox" id="op2" class="size-4" disabled>
                   <label for="op2" class="text-[18px] leading-6">
                       {{question.op2|safe}}
                   </label>
                 </div>
-                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 3%}bg-green-300 bg-opacity-25 rounded-md {%endif%} break-words p-3">
+                <div class="flex gap-4 ml-16 items-start {% if question.correct_op == 3 %}bg-green-300 bg-opacity-25 rounded-md {% else %} {% if question.selected_option == 3 %}bg-red-400 bg-opacity-25 rounded-md{% endif %}  {%endif%} break-words p-3">
                   <input type="checkbox" id="op3" class="size-4" disabled>
                     <label for="op3" class="text-[18px] leading-6">
                         {{question.op3|safe}}
                     </label>
                 </div>
-                <div class="flex gap-4 ml-16 items-start break-words {% if question.correct_op == 4%}bg-green-300 bg-opacity-25 rounded-md {%endif%} p-3">
+                <div class="flex gap-4 ml-16 items-start break-words {% if question.correct_op == 4 %}bg-green-300 bg-opacity-25 rounded-md {% else %} {% if question.selected_option == 4 %} bg-red-400 bg-opacity-25 rounded-md{% endif %} {%endif%} p-3">
                   <input type="checkbox" id="op4" class="size-4" disabled>
                     <label for="op4" class="text-[18px] leading-6">
                         {{question.op4|safe}}
@@ -520,7 +520,7 @@
     </div>
   </div>
   </div>
-    <script src='{% static "portal/questions-manager.js" %}'></script>
+    {% comment %} <script src='{% static "portal/questions-manager.js" %}'></script> {% endcomment %}
     <script>
       function changeLoc(){
         window.location.href="{% url 'add-question' tests.id %}"
