--- a/portal/templates/portal/test-settings/results.html
+++ b/portal/templates/portal/test-settings/results.html
@@ -323,7 +323,7 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'user-details' test.id %}">
+              <a href="{% url 'results' test.id %}">
                 <div
                   class="p-3 flex shadow-sm items-center gap-3 bg-white rounded-md"
                 >
@@ -454,52 +454,52 @@
                   </td>
                 </tr>
                 {% for user in users %}
-                <tr class="">
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    <input type="checkbox" data-status='{{user.test_status}}' name='question_check' class="size-4 question_check" id='{{user.id}}'
-                      {% if user.test_status == '1' %}
-                        disabled                        
-                      {% endif %}
-                    />
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.username == "" %}
-                     - 
-                    {% else %}
-                     {{user.username}} 
-                    {% endif %}
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.first_name == "" %} 
-                      - 
-                    {% else %}
-                      {{user.first_name|title}} 
-                    {% endif %}
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.last_name == "" %} 
-                      - 
-                    {% else %}
-                    {{user.last_name|title}} 
-                    {% endif %}
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.score == "" %}
-                     -
-                    {% else %}
-                     {{user.score}} / {{test_question_no}}
-                    {% endif %}
-                  </td>
-                  <td class="py-2 text-[12px] font-semibold tracking-wide text-left">
-                    <a class='hidden' href="{% url 'reset-user' user.id test.id  %}">
-                      <button class="{% if user.test_status == '1' %} hidden {% elif user.test_status == '2' %} inline-block {% endif %} p-3">
-                        <svg xmlns="http://www.w3.org/2000/svg" id='reset-user' fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
-                        </svg>
-                      </button>
-                    </a>
-                  </td>
-                </tr>
+                    <tr class="" onclick="window.location.href = `{% url 'result-detailed' user.id test.id %}`" >
+                      <td class="px-3 py-5 text-[14px] text-gray-700">
+                        <input type="checkbox" data-status='{{user.test_status}}' name='question_check' class="size-4 question_check" id='{{user.id}}'
+                          {% if user.test_status == '1' %}
+                            disabled                        
+                          {% endif %}
+                        />
+                      </td>
+                      <td class="px-3 py-5 text-[14px] text-gray-700">
+                        {% if user.username == "" %}
+                        - 
+                        {% else %}
+                        {{user.username}} 
+                        {% endif %}
+                      </td>
+                      <td class="px-3 py-5 text-[14px] text-gray-700">
+                        {% if user.first_name == "" %} 
+                          - 
+                        {% else %}
+                          {{user.first_name|title}} 
+                        {% endif %}
+                      </td>
+                      <td class="px-3 py-5 text-[14px] text-gray-700">
+                        {% if user.last_name == "" %} 
+                          - 
+                        {% else %}
+                        {{user.last_name|title}} 
+                        {% endif %}
+                      </td>
+                      <td class="px-3 py-5 text-[14px] text-gray-700">
+                        {% if user.score == "" %}
+                        -
+                        {% else %}
+                        {{user.score}} / {{test_question_no}}
+                        {% endif %}
+                      </td>
+                      <td class="py-2 text-[12px] font-semibold tracking-wide text-left">
+                        <a class='hidden' href="{% url 'reset-user' user.id test.id  %}">
+                          <button class="{% if user.test_status == '1' %} hidden {% elif user.test_status == '2' %} inline-block {% endif %} p-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" id='reset-user' fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
+                            </svg>
+                          </button>
+                        </a>
+                      </td>
+                    </tr>
                 {% endfor %}
               </tbody>
             </table>
@@ -541,6 +541,11 @@
       </div>
     </div>
   </div>
+    <script>
+      function handleResultClick(userID, testID){
+        window.location.href = {% url 'result-detailed' user.id test.id %}
+      }
+    </script>
     <script src='{% static "portal/results.js" %}'></script>
   </body>
 </html>
